--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,13 @@
 <div class="header">
     <div class="titulo">Cronómetro Liga de Debate CICAE-UCJC</div>
     <div class="logos">
-        <img class="logo-ap" src="assets/img/logo.svg">
+        <div class="columna izquierda">
+        <img class="logo_ap" src="assets/img/logo_aP.svg">
+        <img src="assets/img/logo_IVLigaDeDebate.svg">
+        </div>
+        <div class="columna derecha">
+        <img src="assets/img/logo_CICAE.svg">
+        <img src="assets/img/logo_UCJC.svg">
+        </div>
     </div>
 </div>
