--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,7 +2,7 @@
 
 html, body {
     height: 100%;
-    font-size: calc(100vh / 62.5);
+    font-size: calc(100vw / 80);
 }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .mat-form-field-label-wrapper {
