--- a/src/app/cuerpo/cuerpo.component.scss
+++ b/src/app/cuerpo/cuerpo.component.scss
@@ -1,11 +1,22 @@
 .cuerpo {
-    position: fixed;
-    top: calc(30vh - 6rem);
-    width: 60%;
-    margin-left: 20%;
+    @media (max-width: 768px) { // Tablets
+        position: relative;
+    }
+    @media (min-width: 769px) { // Desktop
+        position: fixed;
+        top: 15vh;
+        width: 60%;
+        margin-left: 20%;
+        .tarjeta {
+            height: 80vh;
+            overflow-y: scroll;
+        }
+    }
     .tarjeta {
-        height: 70vh;
-        overflow-y: scroll;
+        .encabezado {
+            align-items: flex-start;
+            justify-content: flex-end;
+        }
         .numero {
             background-color: #3f51b5;
             color: #fff;
