--- a/src/app/cuerpo/cuerpo.component.html
+++ b/src/app/cuerpo/cuerpo.component.html
@@ -1,10 +1,10 @@
 <div class="cuerpo">
     <mat-card class="tarjeta">
-        <!--mat-card-header class="encabezado">
-            <button mat-icon-button aria-label="Configurar los temporizadores" (click)="abreModal()>
+        <mat-card-header class="encabezado">
+            <button mat-icon-button aria-label="Configurar los temporizadores" (click)="abreModal(modal)">
                 <mat-icon>settings_applications</mat-icon>
             </button>
-        </mat-card-header-->
+        </mat-card-header>
         <mat-card-content>
             <mat-accordion>
                 <mat-expansion-panel *ngFor="let turno of turnos; index as i; first as primero" [expanded]="primero">
@@ -27,3 +27,34 @@
         </mat-card-content>
     </mat-card>
 </div>
+<ng-template #modal>
+    <h1 mat-dialog-title>Configurar temporizadores</h1>
+    <div mat-dialog-content>
+        <div class="conf-temp" *ngFor="let val of valores; index as i; first as primero" [class.mat-elevation-z2]="true">
+            <h4>{{(i + 1) + ": " + turnos[i].nombre + ' - ' + tipoTurno[turnos[i].tipoTurno]}}</h4>
+            <div class="campos">
+                <mat-form-field>
+                    <input class="campo"
+                           type="number"
+                           placeholder="Minutos"
+                           matInput
+                           [(ngModel)]="valores[i].min"
+                           (change)="ajustaTiempo()">
+                </mat-form-field>
+                :
+                <mat-form-field>
+                    <input class="campo"
+                           max="59"
+                           type="number"
+                           placeholder="Segundos"
+                           matInput
+                           [(ngModel)]="valores[i].seg"
+                           (change)="ajustaTiempo()">
+                </mat-form-field>
+            </div>
+        </div>
+    </div>
+    <div mat-dialog-actions>
+        <button mat-raised-button color="primary" (click)="cierraModal()">Cerrar</button>
+    </div>
+</ng-template>
