--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,13 +1,11 @@
 <div class="header">
-    <div class="titulo">Cronómetro Liga de Debate CICAE-UCJC</div>
-    <div class="logos">
-        <div class="columna izquierda">
+    <div class="fila superior">
         <img class="logo_ap" src="assets/img/logo_aP.svg">
         <img src="assets/img/logo_IVLigaDeDebate.svg">
-        </div>
-        <div class="columna derecha">
+    </div>
+    <div class="titulo">Cronómetro Liga de Debate CICAE-UCJC</div>
+    <div class="fila inferior">
         <img src="assets/img/logo_CICAE.svg">
         <img src="assets/img/logo_UCJC.svg">
-        </div>
     </div>
 </div>
