--- a/src/app/resumen/resumen.component.html
+++ b/src/app/resumen/resumen.component.html
@@ -2,15 +2,15 @@
     <div class="mdc-data-table mat-elevation-z2">
         <table class="mdc-data-table__table" aria-label="Resumen debate">
             <thead>
-                <tr class="mdc-data-table__header-row">
+                <tr class="mdc-data-table__header-row encabezado">
                     <th class="mdc-data-table__header-cell" role="columnheader" scope="col">Turno</th>
                     <th class="mdc-data-table__header-cell" role="columnheader" scope="col">Postura</th>
                     <th class="mdc-data-table__header-cell mdc-data-table__header-cell--numeric" role="columnheader" scope="col">Tiempo total</th>
                 </tr>
             </thead>
             <tbody class="mdc-data-table__content">
-                <tr class="mdc-data-table__row" *ngFor="let turno of resumen">
-                    <td class="mdc-data-table__cell">{{turno.turno}}</td>
+                <tr class="mdc-data-table__row" *ngFor="let turno of resumen; index as i; first as primero">
+                    <td class="mdc-data-table__cell" [attr.rowspan]="turno.rowspan" *ngIf="turno.visible">{{turno.turno}}</td>
                     <td class="mdc-data-table__cell">{{turno.postura}}</td>
                     <td class="mdc-data-table__cell mdc-data-table__header-cell--numeric">{{turno.tiempo}}</td>
                 </tr>
