--- a/src/app/resumen/resumen.component.scss
+++ b/src/app/resumen/resumen.component.scss
@@ -7,5 +7,22 @@
             font-size: calc(0.875rem * 1.5);
             line-height: calc(1.375rem * 1.5);
         }
+        td {
+            border-right: 1px solid rgba(0,0,0,0.12);
+            &:last-of-type {
+                border-right: none;
+                text-align: center;
+            }
+        }
+        .encabezado {
+            background-color: #223656;
+            th {
+                color: #fff;
+                border-right: 1px solid #fff;
+                &:last-of-type {
+                    border-right: none;
+                }
+            }
+        }
     }
 }
