--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,37 +8,97 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .mat-form-field-label-wrapper {
     font-size: 2rem;
 }
+.dialog-add.mat-dialog-content {
+    display: flex;
+    flex-direction: column;
+    .tiempo {
+        display: flex;
+        flex-direction: row;
+        .separador {
+            margin: 1rem .5rem 0 .5rem;
+            font-size: 1.5rem;
+        }
+        .mat-form-field-wrapper {
+            width: 5em;
+            input {
+                text-align: center;
+                font-size: 1.5rem;
+            }
+        }
+    }
+    .mat-form-field-label-wrapper {
+        font-size: inherit;
+    }
+}
 .conf-dialog {
-    .mat-dialog-content {
+    .mat-dialog-content:not(.dialog-add) {
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
         justify-content: space-between;
-        .conf-temp {
-            min-width: 15rem;
-            padding: 0 1rem;
-            margin-bottom: 1rem;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            .campos {
-                display: inline-block;
-                .mat-form-field-wrapper {
-                    .mat-form-field-infix {
-                        width: 60px;
-                        .campo {
-                            text-align: center;
-                            font-size: 1.5rem;
-                        } 
-                        .mat-form-field-label-wrapper {
-                            font-size: 1rem;
-                        }
-                    }
-                }
-            }
-        }
+        margin-right: 0;
+        min-width: 40vw;
     }
     .mat-dialog-actions {
         justify-content: flex-end;
+    }
+}
+.cdk-drag-preview {
+    box-sizing: border-box;
+    border-radius: 4px;
+    box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
+        0 8px 10px 1px rgba(0, 0, 0, 0.14),
+        0 3px 14px 2px rgba(0, 0, 0, 0.12);
+}
+.cdk-drag-placeholder {
+    opacity: 0.25;
+}
+.cdk-drag-animating {
+    transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
+.drag-drop-list.cdk-drop-list-dragging .conf-temp:not(.cdk-drag-placeholder) {
+    transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
+.drag-drop-list {
+    width: 97%;
+    border: solid 1px #ccc;
+}
+.conf-temp {
+    width: 100%;
+    padding: 0 1rem;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    background-color: #fff;
+    box-sizing: border-box;
+    border-bottom: 1px solid #ccc;
+    &:last-child {
+        border: none;
+    }
+    .btn-drag {
+        cursor: move;
+    }
+    .nombre-temp {
+        min-width: 50%;
+        margin-right: 1rem;
+        font-size: 1rem;
+    }
+    .campos {
+        display: inline-block;
+        height: 3.5rem;
+        .mat-form-field-wrapper {
+            .mat-form-field-infix {
+                width: 3em;
+                .campo {
+                    text-align: center;
+                    font-size: 1rem;
+                }
+                .mat-form-field-label-wrapper {
+                    font-size: .8rem;
+                    text-align: center;
+                }
+            }
+        }
     }
 }
