--- a/src/app/resumen/resumen.component.scss
+++ b/src/app/resumen/resumen.component.scss
@@ -15,7 +15,7 @@
             }
         }
         .encabezado {
-            background-color: #223656;
+            background-color: #00a2ff;
             th {
                 color: #fff;
                 border-right: 1px solid #fff;
