--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,58 +1,29 @@
 .header {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: flex-start;
     width: 100%;
     margin: 0;
     @media (max-width: 768px) { // Tablets
         position: relative;
-        padding-bottom: 2rem;
-        .titulo {
-            font-size: 5vh;
-        }
-        .superior {
-            padding-top: 0;
+        .logo_ap {
+            height: 5vh;
+            margin: 1vh 3vw 2vh;
         }
     }
     @media (min-width: 769px) { // Desktop
         position: fixed;
         top: 0;
         left: 0;
-        height: 40vh;
-        .titulo {
-            font-size: 5.5vh;
-            padding-top: 2vh;
-        }
-        .superior {
-            margin-top: 3vh;
-        }
-    }
-    background-color: #223656;
-    .titulo {
-        color: #fff;
-        margin: 0 auto;
-        text-align: center;
-    }
-    .fila {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: center;
-        img {
-            margin: 0 3vw;
-        }
-        &.superior {
-            height: 10vh;
-            background-color: #fff;
-            img {
-                width: 17vw;
-            }
-        }
-        &.inferior {
+        height: 26vh;
+        .logo_ap {
             height: 7vh;
-            margin-top: 5vh;
-            border-top: 1px solid #fff;
-            padding-top: 3vh;
-            img {
-                width: 14vw;
-            }
+            margin: 3vh 1rem;
         }
+    }
+    background-color: #00a2ff;
+    .logo_ap {
+        width: auto;
     }
 }
