--- a/src/app/resumen/resumen.component.html
+++ b/src/app/resumen/resumen.component.html
@@ -3,8 +3,8 @@
         <table class="mdc-data-table__table" aria-label="Resumen debate">
             <thead>
                 <tr class="mdc-data-table__header-row encabezado">
-                    <th class="mdc-data-table__header-cell" role="columnheader" scope="col">Turno</th>
-                    <th class="mdc-data-table__header-cell" role="columnheader" scope="col">Postura</th>
+                    <th class="mdc-data-table__header-cell" role="columnheader" scope="col">Tipo</th>
+                    <th class="mdc-data-table__header-cell" role="columnheader" scope="col">Descripción</th>
                     <th class="mdc-data-table__header-cell mdc-data-table__header-cell--numeric" role="columnheader" scope="col">Tiempo total</th>
                 </tr>
             </thead>
