--- a/src/styles.scss
+++ b/src/styles.scss
@@ -26,6 +26,10 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
             }
         }
     }
+    .tip {
+        font-size: .75em;
+        color: #666;
+    }
     .mat-form-field-label-wrapper {
         font-size: inherit;
     }
