chore: time and logo adjustment

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,8 @@
 <div class="header">
     <div class="fila superior">
-        <img class="logo_ap" src="assets/img/logo_aP.svg">
-        <img src="assets/img/logo_IVLigaDeDebate.svg">
+        <img class="logo_ap"
+             src="assets/img/logo_aP.svg">
+        <img src="assets/img/logo_LigaDeDebate.png">
     </div>
     <div class="titulo">Cronómetro Liga de Debate CICAE-UCJC</div>
     <div class="fila inferior">
